fixed commit bugs
lw0 almost finished